Fix joker z-index

--- a/ui/src/app/game-view/game-field/jokers/joker-card/joker-card.component.scss
+++ b/ui/src/app/game-view/game-field/jokers/joker-card/joker-card.component.scss
@@ -1,6 +1,7 @@
 :host {
+  z-index: 15; // to be above market cards
+
   &.highlighted {
-    z-index: 1;
     app-flip-card {
       transform: var(--translate-to-center) scale(3);
 
